--- a/Legacy.bib
+++ b/Legacy.bib
@@ -1,14 +1,13 @@
-@article{Ebejer2013,
-abstract = {Genome-wide association studies (GWAS) of attention-deficit/hyperactivity disorder (ADHD) offer the benefit of a hypothesis-free approach to measuring the quantitative effect of genetic variants on affection status. Generally the findings of GWAS relying on ADHD status have been non-significant, but the one study using quantitative measures of symptoms found SLC9A9 and SLC6A1 were associated with inattention and hyperactivity-impulsivity. Accordingly, we performed a GWAS using quantitative measures of each ADHD subtype measured with the Strengths and Weaknesses of ADHD and Normal Behaviour (SWAN) scale in two community-based samples. This scale captures the full range of attention and kinetic behavior; from high levels of attention and appropriate activity to the inattention and hyperactivity-impulsivity associated with ADHD within two community-based samples. Our discovery sample comprised 1,851 participants (mean age = 22.8 years [4.8]; 50.6{\%} female), while our replication sample comprised 155 participants (mean age = 26.3 years [3.1]; 68.4{\%} females). Age, sex, age × sex, and age2 were included as covariates and the results from each sample were combined using meta-analysis, then analyzed with a gene-based test to estimate the combined effect of markers within genes. We compare our results with markers that have previously been found to have a strong association with ADHD symptoms. Neither the GWAS nor subsequent meta-analyses yielded genome-wide significant results; the strongest effect was observed at rs2110267 (4.62 × 10-7) for symptoms of hyperactivity-impulsivity. The strongest effect in the gene-based test was for GPR139 on symptoms of inattention (6.40 × 10-5). Replication of this study with larger samples will add to our understanding of the genetic etiology of ADHD.},
-author = {Ebejer, Jane L. and Duffy, David L. and {Van Der Werf}, Julius and Wright, Margaret J. and Montgomery, Grant and Gillespie, Nathan A. and Hickie, Ian B. and Martin, Nicholas G. and Medland, Sarah E.},
-doi = {10.1017/thg.2013.12},
-isbn = {18324274 (ISSN)},
-issn = {18324274},
-journal = {Twin Research and Human Genetics},
-keywords = {ADHD,GWAS,SWAN,hyperactivity-impulsivity,inattention,meta-analysis},
-pmid = {23527680},
-title = {{Genome-wide association study of inattention and hyperactivity-impulsivity measured as quantitative traits}},
-year = {2013}
+@article{Kraja2011,
+abstract = {OBJECTIVE The metabolic syndrome (MetS) is defined as concomitant disorders of lipid and glucose metabolism, central obesity, and high blood pressure, with an increased risk of type 2 diabetes and cardiovascular disease. This study tests whether common genetic variants with pleiotropic effects account for some of the correlated architecture among five metabolic phenotypes that define MetS. RESEARCH DESIGN AND METHODS Seven studies of the STAMPEED consortium, comprising 22,161 participants of European ancestry, underwent genome-wide association analyses of metabolic traits using a panel of ∼2.5 million imputed single nucleotide polymorphisms (SNPs). Phenotypes were defined by the National Cholesterol Education Program (NCEP) criteria for MetS in pairwise combinations. Individuals exceeding the NCEP thresholds for both traits of a pair were considered affected. RESULTS Twenty-nine common variants were associated with MetS or a pair of traits. Variants in the genes LPL, CETP, APOA5 (and its cluster), GCKR (and its cluster), LIPC, TRIB1, LOC100128354/MTNR1B, ABCB11, and LOC100129150 were further tested for their association with individual qualitative and quantitative traits. None of the 16 top SNPs (one per gene) associated simultaneously with more than two individual traits. Of them 11 variants showed nominal associations with MetS per se. The effects of 16 top SNPs on the quantitative traits were relatively small, together explaining from ∼9{\%} of the variance in triglycerides, 5.8{\%} of high-density lipoprotein cholesterol, 3.6{\%} of fasting glucose, and 1.4{\%} of systolic blood pressure. CONCLUSIONS Qualitative and quantitative pleiotropic tests on pairs of traits indicate that a small portion of the covariation in these traits can be explained by the reported common genetic variants.},
+author = {Kraja, Aldi T. and Vaidya, Dhananjay and Pankow, James S. and Goodarzi, Mark O. and Assimes, Themistocles L. and Kullo, Iftikhar J. and Sovio, Ulla and Mathias, Rasika A. and Sun, Yan V. and Franceschini, Nora and Absher, Devin and Li, Guo and Zhang, Qunyuan and Feitosa, Mary F. and Glazer, Nicole L. and Haritunians, Talin and Hartikainen, Anna Liisa and Knowles, Joshua W. and North, Kari E. and Iribarren, Carlos and Kral, Brian and Yanek, Lisa and O'Reilly, Paul F. and McCarthy, Mark I. and Jaquish, Cashell and Couper, David J. and Chakravarti, Aravinda and Psaty, Bruce M. and Becker, Lewis C. and Province, Michael A. and Boerwinkle, Eric and Quertermous, Thomas and Palotie, Leena and Jarvelin, Marjo Riitta and Becker, Diane M. and Kardia, Sharon L.R. and Rotter, Jerome I. and Chen, Yii Der Ida and Borecki, Ingrid B.},
+doi = {10.2337/db10-1011},
+isbn = {1939-327X (Electronic)$\backslash$r0012-1797 (Linking)},
+issn = {00121797},
+journal = {Diabetes},
+pmid = {21386085},
+title = {{A bivariate genome-wide approach to metabolic syndrome: STAMPEED Consortium}},
+year = {2011}
 }
 @article{Mandage2017,
 abstract = {Epstein-Barr virus (EBV), human herpes virus 4, has been classically associated with infectious mononucleosis, multiple sclerosis and several types of cancers. Many of these diseases show marked geographical differences in prevalence, which points to underlying genetic and/or environmental factors. Those factors may include a different susceptibility to EBV infection and viral copy number among human populations. Since EBV is commonly used to transform B-cells into lymphoblastoid cell lines (LCLs) we hypothesize that differences in EBV copy number among individual LCLs may reflect differential susceptibility to EBV infection. To test this hypothesis, we retrieved whole-genome sequenced EBV-mapping reads from 1,753 LCL samples derived from 19 populations worldwide that were sequenced within the context of the 1000 Genomes Project. An in silico methodology was developed to estimate the number of EBV copy number in LCLs and validated these estimations by real-time PCR. After experimentally confirming that EBV relative copy number remains stable over cell passages, we performed a genome wide association analysis (GWAS) to try detecting genetic variants of the host that may be associated with EBV copy number. Our GWAS has yielded several genomic regions suggestively associated with the number of EBV genomes per cell in LCLs, unraveling promising candidate genes such as CAND1, a known inhibitor of EBV replication. While this GWAS does not unequivocally establish the degree to which genetic makeup of individuals determine viral levels within their derived LCLs, for which a larger sample size will be needed, it potentially highlighted human genes affecting EBV-related processes, which constitute interesting candidates to follow up in the context of EBV related pathologies.},
@@ -21,27 +20,26 @@ pmid = {28654678},
 title = {{Genetic factors affecting EBV copy number in lymphoblastoid cell lines derived from the 1000 Genome Project samples}},
 year = {2017}
 }
-@article{McCarthy2016,
-abstract = {We describe a reference panel of 64,976 human haplotypes at 39,235,157 SNPs constructed using whole-genome sequence data from 20 studies of predominantly European ancestry. Using this resource leads to accurate genotype imputation at minor allele frequencies as low as 0.1{\%} and a large increase in the number of SNPs tested in association studies, and it can help to discover and refine causal loci. We describe remote server resources that allow researchers to carry out imputation and phasing consistently and efficiently.},
-author = {McCarthy, Shane and Das, Sayantan and Kretzschmar, Warren and Delaneau, Olivier and Wood, Andrew R. and Teumer, Alexander and Kang, Hyun Min and Fuchsberger, Christian and Danecek, Petr and Sharp, Kevin and Luo, Yang and Sidore, Carlo and Kwong, Alan and Timpson, Nicholas and Koskinen, Seppo and Vrieze, Scott and Scott, Laura J. and Zhang, He and Mahajan, Anubha and Veldink, Jan and Peters, Ulrike and Pato, Carlos and {Van Duijn}, Cornelia M. and Gillies, Christopher E. and Gandin, Ilaria and Mezzavilla, Massimo and Gilly, Arthur and Cocca, Massimiliano and Traglia, Michela and Angius, Andrea and Barrett, Jeffrey C. and Boomsma, Dorrett and Branham, Kari and Breen, Gerome and Brummett, Chad M. and Busonero, Fabio and Campbell, Harry and Chan, Andrew and Chen, Sai and Chew, Emily and Collins, Francis S. and Corbin, Laura J. and Smith, George Davey and Dedoussis, George and Dorr, Marcus and Farmaki, Aliki Eleni and Ferrucci, Luigi and Forer, Lukas and Fraser, Ross M. and Gabriel, Stacey and Levy, Shawn and Groop, Leif and Harrison, Tabitha and Hattersley, Andrew and Holmen, Oddgeir L. and Hveem, Kristian and Kretzler, Matthias and Lee, James C. and McGue, Matt and Meitinger, Thomas and Melzer, David and Min, Josine L. and Mohlke, Karen L. and Vincent, John B. and Nauck, Matthias and Nickerson, Deborah and Palotie, Aarno and Pato, Michele and Pirastu, Nicola and McInnis, Melvin and Richards, J. Brent and Sala, Cinzia and Salomaa, Veikko and Schlessinger, David and Schoenherr, Sebastian and Slagboom, P. Eline and Small, Kerrin and Spector, Timothy and Stambolian, Dwight and Tuke, Marcus and Tuomilehto, Jaakko and {Van Den Berg}, Leonard H. and {Van Rheenen}, Wouter and Volker, Uwe and Wijmenga, Cisca and Toniolo, Daniela and Zeggini, Eleftheria and Gasparini, Paolo and Sampson, Matthew G. and Wilson, James F. and Frayling, Timothy and {De Bakker}, Paul I.W. and Swertz, Morris A. and McCarroll, Steven and Kooperberg, Charles and Dekker, Annelot and Altshuler, David and Willer, Cristen and Iacono, William and Ripatti, Samuli and Soranzo, Nicole and Walter, Klaudia and Swaroop, Anand and Cucca, Francesco and Anderson, Carl A. and Myers, Richard M. and Boehnke, Michael and McCarthy, Mark I. and Durbin, Richard and Abecasis, Gon{\c{c}}alo and Marchini, Jonathan},
-doi = {10.1038/ng.3643},
-isbn = {1546-1718 (Electronic) 1061-4036 (Linking)},
-issn = {15461718},
-journal = {Nature Genetics},
-pmid = {27548312},
-title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
-year = {2016}
+@article{Belsare2018,
+abstract = {Data from the 1000 Genomes project is quite often used as a reference for human genomic analysis. However, its accuracy needs to be assessed to understand the quality of predictions made using this reference. We present here an assessment of the genotype, phasing, and imputation accuracy data in the 1000 Genomes project. We compare the phased haplotype calls from the 1000 Genomes project to experimentally phased haplotypes for 28 of the same individuals sequenced using the 10X Genomics platform. We observe that phasing and imputation for rare variants are unreliable, which likely reflects the limited sample size of the 1000 Genomes project data. Further, it appears that using a population specific reference panel does not improve the accuracy of imputation over using the entire 1000 Genomes data set as a reference panel. We also note that the error rates and trends depend on the choice of definition of error, and hence any error reporting needs to take these definitions into account.},
+author = {Belsare, Saurabh and Sakin-Levy, Michal and Mostovoy, Yulia and Durinck, Steffen and Chaudhry, Subhra and Xiao, Ming and Peterson, Andrew S and Kwok, Pui-Yan and Seshagiri, Somasekar and Wall, Jeffrey D},
+journal = {bioRxiv},
+month = {jan},
+title = {{Evaluating the quality of the 1000 Genomes Project data}},
+url = {http://biorxiv.org/content/early/2018/08/03/383950.abstract},
+year = {2018}
 }
-@article{Benjamini2006,
-abstract = {S The linear step-up multiple testing procedure controls the false discovery rate at the desired level q for independent and positively dependent test statistics. When all null hypotheses are true, and the test statistics are independent and continuous, the bound is sharp. When some of the null hypotheses are not true, the procedure is conservative by a factor which is the proportion m 0 /m of the true null hypotheses among the hypotheses. We provide a new two-stage procedure in which the linear step-up procedure is used in stage one to estimate m 0 , providing a new level q∞ which is used in the linear step-up procedure in the second stage. We prove that a general form of the two-stage procedure controls the false discovery rate at the desired level q. This framework enables us to study analytically the properties of other procedures that exist in the literature. A simulation study is presented that shows that two-stage adaptive procedures improve in power over the original procedure, mainly because they provide tighter control of the false discovery rate. We further study the performance of the current suggestions, some variations of the procedures, and previous suggestions, in the case where the test statistics are positively dependent, a case for which the original procedure controls the false discovery rate. In the setting studied here the newly proposed two-stage procedure is the only one that controls the false discovery rate. The procedures are illustrated with two examples of biological importance. 1. I The traditional concern when testing m hypotheses simultaneously is to control the familywise error rate, the probability of making any false discovery. The restrictiveness of 492 Y. B, A. M. K  D. Y the familywise error rate criterion leads to multiple testing procedures that are not powerful in the sense that the probability of rejecting null hypotheses that are false must also be small. At the other extreme lies the strategy of ignoring the multiplicity issue altogether, and testing each hypothesis at level a. This is a popular approach which increases the probability of rejecting null hypotheses that are false, but ignores the increased expected number of type I errors. The false discovery rate criterion was developed by Benjamini {\&} Hochberg (1995) to bridge these two extremes. The false discovery rate is the expectation of the proportion of rejected true null hypotheses among the rejected hypotheses. When the null hypothesis is true for all hypotheses, the false discovery rate and familywise error rate criteria are equivalent. However, when there are some hypotheses for which the null hypotheses are false, a procedure that controls the false discovery rate may reject many more such hypotheses at the expense of a small proportion of erroneous rejections. The linear step-up procedure, or so-called Benjamini {\&} Hochberg procedure, controls the false discovery rate at a desired level qm 0 /m when the test statistics are independent (Benjamini {\&} Hochberg, 1995) or positively dependent (Benjamini {\&} Yekutieli, 2001). Even though this procedure rejects false null hypotheses more frequently than procedures that control the familywise error rate, if we knew m 0 the procedure could be improved by using q∞=qm/m 0 , to achieve precisely the desired level q. In this paper we develop and compare some adaptive false discovery rate controlling procedures that begin by estimating m 0 . In 2, we recall the formal definition of the false discovery rate criterion, the linear step-up procedure, and review the background for the problem at hand. 2. B 2{\textperiodcentered}1. T he false discovery rate Let H 0i (i=1, . . . , m) be the tested null hypotheses. For i=1, . . . , m 0 the null hypotheses are true, and for the remaining m 1 =m−m 0 the null hypotheses are false. Let V denote the number of true null hypotheses that are erroneously rejected and let R be the total number of hypotheses that are rejected. Now define the proportion of false discoveries by Q=V /R if R{\textgreater}0 and Q=0 if R=0. The false discovery rate is  =E(Q) (Benjamini {\&} Hochberg, 1995). A few recent papers have illuminated the false discovery rate from different points of view, namely asymptotic, Bayesian, empirical Bayes, as the limit of empirical processes and in the context of penalised model selection; see Efron et al. (2001), Storey (2002), Genovese {\&} Wasserman (2004) and Abramovich et al. (2006). Some of the studies emphasised variants of the false discovery rate, such as its conditional value given that some discovery is made (Storey, 2002), or the distribution of the proportion of false discoveries itself (Genovese {\&} Wasserman, 2004). Procedures were developed for specific settings (Troendle, 1999), and the applicability of existing procedures have been studied; see for example Sarkar (2002). The linear step-up procedure makes use of the m p-values, P=(P 1 , . . . , P m). Let p (1) ∏ . . . ∏p (m) be their ordered observed values.},
-author = {Benjamini, Yoav and Krieger, Abba M. and Yekutieli, Daniel},
-doi = {10.1093/biomet/93.3.491},
-isbn = {0006-3444},
-issn = {00063444},
-journal = {Biometrika},
-keywords = {False discovery rate,Multiple testing,Two-stage procedure},
-title = {{Adaptive linear step-up procedures that control the false discovery rate}},
-year = {2006}
+@article{Ebejer2013,
+abstract = {Genome-wide association studies (GWAS) of attention-deficit/hyperactivity disorder (ADHD) offer the benefit of a hypothesis-free approach to measuring the quantitative effect of genetic variants on affection status. Generally the findings of GWAS relying on ADHD status have been non-significant, but the one study using quantitative measures of symptoms found SLC9A9 and SLC6A1 were associated with inattention and hyperactivity-impulsivity. Accordingly, we performed a GWAS using quantitative measures of each ADHD subtype measured with the Strengths and Weaknesses of ADHD and Normal Behaviour (SWAN) scale in two community-based samples. This scale captures the full range of attention and kinetic behavior; from high levels of attention and appropriate activity to the inattention and hyperactivity-impulsivity associated with ADHD within two community-based samples. Our discovery sample comprised 1,851 participants (mean age = 22.8 years [4.8]; 50.6{\%} female), while our replication sample comprised 155 participants (mean age = 26.3 years [3.1]; 68.4{\%} females). Age, sex, age × sex, and age2 were included as covariates and the results from each sample were combined using meta-analysis, then analyzed with a gene-based test to estimate the combined effect of markers within genes. We compare our results with markers that have previously been found to have a strong association with ADHD symptoms. Neither the GWAS nor subsequent meta-analyses yielded genome-wide significant results; the strongest effect was observed at rs2110267 (4.62 × 10-7) for symptoms of hyperactivity-impulsivity. The strongest effect in the gene-based test was for GPR139 on symptoms of inattention (6.40 × 10-5). Replication of this study with larger samples will add to our understanding of the genetic etiology of ADHD.},
+author = {Ebejer, Jane L. and Duffy, David L. and {Van Der Werf}, Julius and Wright, Margaret J. and Montgomery, Grant and Gillespie, Nathan A. and Hickie, Ian B. and Martin, Nicholas G. and Medland, Sarah E.},
+doi = {10.1017/thg.2013.12},
+isbn = {18324274 (ISSN)},
+issn = {18324274},
+journal = {Twin Research and Human Genetics},
+keywords = {ADHD,GWAS,SWAN,hyperactivity-impulsivity,inattention,meta-analysis},
+pmid = {23527680},
+title = {{Genome-wide association study of inattention and hyperactivity-impulsivity measured as quantitative traits}},
+year = {2013}
 }
 @article{RDevelopmentCoreTeam2016,
 abstract = {R Development Core Team (2011). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, URL http://www.R-project.org/.},
@@ -58,14 +56,16 @@ primaryClass = {http:},
 title = {{R: A Language and Environment for Statistical Computing}},
 year = {2016}
 }
-@article{Belsare2018,
-abstract = {Data from the 1000 Genomes project is quite often used as a reference for human genomic analysis. However, its accuracy needs to be assessed to understand the quality of predictions made using this reference. We present here an assessment of the genotype, phasing, and imputation accuracy data in the 1000 Genomes project. We compare the phased haplotype calls from the 1000 Genomes project to experimentally phased haplotypes for 28 of the same individuals sequenced using the 10X Genomics platform. We observe that phasing and imputation for rare variants are unreliable, which likely reflects the limited sample size of the 1000 Genomes project data. Further, it appears that using a population specific reference panel does not improve the accuracy of imputation over using the entire 1000 Genomes data set as a reference panel. We also note that the error rates and trends depend on the choice of definition of error, and hence any error reporting needs to take these definitions into account.},
-author = {Belsare, Saurabh and Sakin-Levy, Michal and Mostovoy, Yulia and Durinck, Steffen and Chaudhry, Subhra and Xiao, Ming and Peterson, Andrew S and Kwok, Pui-Yan and Seshagiri, Somasekar and Wall, Jeffrey D},
-journal = {bioRxiv},
-month = {jan},
-title = {{Evaluating the quality of the 1000 Genomes Project data}},
-url = {http://biorxiv.org/content/early/2018/08/03/383950.abstract},
-year = {2018}
+@article{McCarthy2016,
+abstract = {We describe a reference panel of 64,976 human haplotypes at 39,235,157 SNPs constructed using whole-genome sequence data from 20 studies of predominantly European ancestry. Using this resource leads to accurate genotype imputation at minor allele frequencies as low as 0.1{\%} and a large increase in the number of SNPs tested in association studies, and it can help to discover and refine causal loci. We describe remote server resources that allow researchers to carry out imputation and phasing consistently and efficiently.},
+author = {McCarthy, Shane and Das, Sayantan and Kretzschmar, Warren and Delaneau, Olivier and Wood, Andrew R. and Teumer, Alexander and Kang, Hyun Min and Fuchsberger, Christian and Danecek, Petr and Sharp, Kevin and Luo, Yang and Sidore, Carlo and Kwong, Alan and Timpson, Nicholas and Koskinen, Seppo and Vrieze, Scott and Scott, Laura J. and Zhang, He and Mahajan, Anubha and Veldink, Jan and Peters, Ulrike and Pato, Carlos and {Van Duijn}, Cornelia M. and Gillies, Christopher E. and Gandin, Ilaria and Mezzavilla, Massimo and Gilly, Arthur and Cocca, Massimiliano and Traglia, Michela and Angius, Andrea and Barrett, Jeffrey C. and Boomsma, Dorrett and Branham, Kari and Breen, Gerome and Brummett, Chad M. and Busonero, Fabio and Campbell, Harry and Chan, Andrew and Chen, Sai and Chew, Emily and Collins, Francis S. and Corbin, Laura J. and Smith, George Davey and Dedoussis, George and Dorr, Marcus and Farmaki, Aliki Eleni and Ferrucci, Luigi and Forer, Lukas and Fraser, Ross M. and Gabriel, Stacey and Levy, Shawn and Groop, Leif and Harrison, Tabitha and Hattersley, Andrew and Holmen, Oddgeir L. and Hveem, Kristian and Kretzler, Matthias and Lee, James C. and McGue, Matt and Meitinger, Thomas and Melzer, David and Min, Josine L. and Mohlke, Karen L. and Vincent, John B. and Nauck, Matthias and Nickerson, Deborah and Palotie, Aarno and Pato, Michele and Pirastu, Nicola and McInnis, Melvin and Richards, J. Brent and Sala, Cinzia and Salomaa, Veikko and Schlessinger, David and Schoenherr, Sebastian and Slagboom, P. Eline and Small, Kerrin and Spector, Timothy and Stambolian, Dwight and Tuke, Marcus and Tuomilehto, Jaakko and {Van Den Berg}, Leonard H. and {Van Rheenen}, Wouter and Volker, Uwe and Wijmenga, Cisca and Toniolo, Daniela and Zeggini, Eleftheria and Gasparini, Paolo and Sampson, Matthew G. and Wilson, James F. and Frayling, Timothy and {De Bakker}, Paul I.W. and Swertz, Morris A. and McCarroll, Steven and Kooperberg, Charles and Dekker, Annelot and Altshuler, David and Willer, Cristen and Iacono, William and Ripatti, Samuli and Soranzo, Nicole and Walter, Klaudia and Swaroop, Anand and Cucca, Francesco and Anderson, Carl A. and Myers, Richard M. and Boehnke, Michael and McCarthy, Mark I. and Durbin, Richard and Abecasis, Gon{\c{c}}alo and Marchini, Jonathan},
+doi = {10.1038/ng.3643},
+isbn = {1546-1718 (Electronic) 1061-4036 (Linking)},
+issn = {15461718},
+journal = {Nature Genetics},
+pmid = {27548312},
+title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
+year = {2016}
 }
 @article{Aikens2018,
 abstract = {Our understanding of mutation rate helps us build evolutionary models and make sense of genetic variation. Recent work indicates that the frequencies of specific mutation types have been elevated in Europe, and that many more, subtler signatures of global polymorphism variation may yet remain unidentified. Here, we present an analysis of the 1,000 Genomes Project (phase 3), suggesting additional putative signatures of mutation rate variation across populations and the extent to which they are shaped by local sequence context. First, we compiled a list of the most significantly variable polymorphism types in a cross-continental statistical test. Clustering polymorphisms together, we observed four sets of substitution types that showed similar trends of relative mutation rate across populations, and describe the patterns of these mutational clusters among continental groups. For the majority of these signatures, we found that a single flanking base pair of sequence context was sufficient to determine the majority of enrichment or depletion of a mutation type. However, local genetic context up to 2-3 base pairs away contributes additional variability, and helps to interpret a previously noted enrichment of certain polymorphism types in some East Asian groups. Building our understanding of mutation rate in this way can help us to construct more accurate evolutionary models and better understand the mechanisms that underlie genetic change.},
@@ -75,6 +75,17 @@ month = {jan},
 title = {{Signals of variation in human mutation rate at multiple levels of sequence context}},
 url = {http://biorxiv.org/content/early/2018/08/04/385096.abstract},
 year = {2018}
+}
+@article{Benjamini2006,
+abstract = {S The linear step-up multiple testing procedure controls the false discovery rate at the desired level q for independent and positively dependent test statistics. When all null hypotheses are true, and the test statistics are independent and continuous, the bound is sharp. When some of the null hypotheses are not true, the procedure is conservative by a factor which is the proportion m 0 /m of the true null hypotheses among the hypotheses. We provide a new two-stage procedure in which the linear step-up procedure is used in stage one to estimate m 0 , providing a new level q∞ which is used in the linear step-up procedure in the second stage. We prove that a general form of the two-stage procedure controls the false discovery rate at the desired level q. This framework enables us to study analytically the properties of other procedures that exist in the literature. A simulation study is presented that shows that two-stage adaptive procedures improve in power over the original procedure, mainly because they provide tighter control of the false discovery rate. We further study the performance of the current suggestions, some variations of the procedures, and previous suggestions, in the case where the test statistics are positively dependent, a case for which the original procedure controls the false discovery rate. In the setting studied here the newly proposed two-stage procedure is the only one that controls the false discovery rate. The procedures are illustrated with two examples of biological importance. 1. I The traditional concern when testing m hypotheses simultaneously is to control the familywise error rate, the probability of making any false discovery. The restrictiveness of 492 Y. B, A. M. K  D. Y the familywise error rate criterion leads to multiple testing procedures that are not powerful in the sense that the probability of rejecting null hypotheses that are false must also be small. At the other extreme lies the strategy of ignoring the multiplicity issue altogether, and testing each hypothesis at level a. This is a popular approach which increases the probability of rejecting null hypotheses that are false, but ignores the increased expected number of type I errors. The false discovery rate criterion was developed by Benjamini {\&} Hochberg (1995) to bridge these two extremes. The false discovery rate is the expectation of the proportion of rejected true null hypotheses among the rejected hypotheses. When the null hypothesis is true for all hypotheses, the false discovery rate and familywise error rate criteria are equivalent. However, when there are some hypotheses for which the null hypotheses are false, a procedure that controls the false discovery rate may reject many more such hypotheses at the expense of a small proportion of erroneous rejections. The linear step-up procedure, or so-called Benjamini {\&} Hochberg procedure, controls the false discovery rate at a desired level qm 0 /m when the test statistics are independent (Benjamini {\&} Hochberg, 1995) or positively dependent (Benjamini {\&} Yekutieli, 2001). Even though this procedure rejects false null hypotheses more frequently than procedures that control the familywise error rate, if we knew m 0 the procedure could be improved by using q∞=qm/m 0 , to achieve precisely the desired level q. In this paper we develop and compare some adaptive false discovery rate controlling procedures that begin by estimating m 0 . In 2, we recall the formal definition of the false discovery rate criterion, the linear step-up procedure, and review the background for the problem at hand. 2. B 2{\textperiodcentered}1. T he false discovery rate Let H 0i (i=1, . . . , m) be the tested null hypotheses. For i=1, . . . , m 0 the null hypotheses are true, and for the remaining m 1 =m−m 0 the null hypotheses are false. Let V denote the number of true null hypotheses that are erroneously rejected and let R be the total number of hypotheses that are rejected. Now define the proportion of false discoveries by Q=V /R if R{\textgreater}0 and Q=0 if R=0. The false discovery rate is  =E(Q) (Benjamini {\&} Hochberg, 1995). A few recent papers have illuminated the false discovery rate from different points of view, namely asymptotic, Bayesian, empirical Bayes, as the limit of empirical processes and in the context of penalised model selection; see Efron et al. (2001), Storey (2002), Genovese {\&} Wasserman (2004) and Abramovich et al. (2006). Some of the studies emphasised variants of the false discovery rate, such as its conditional value given that some discovery is made (Storey, 2002), or the distribution of the proportion of false discoveries itself (Genovese {\&} Wasserman, 2004). Procedures were developed for specific settings (Troendle, 1999), and the applicability of existing procedures have been studied; see for example Sarkar (2002). The linear step-up procedure makes use of the m p-values, P=(P 1 , . . . , P m). Let p (1) ∏ . . . ∏p (m) be their ordered observed values.},
+author = {Benjamini, Yoav and Krieger, Abba M. and Yekutieli, Daniel},
+doi = {10.1093/biomet/93.3.491},
+isbn = {0006-3444},
+issn = {00063444},
+journal = {Biometrika},
+keywords = {False discovery rate,Multiple testing,Two-stage procedure},
+title = {{Adaptive linear step-up procedures that control the false discovery rate}},
+year = {2006}
 }
 @article{Pleasance2010a,
 abstract = {All cancers carry somatic mutations. A subset of these somatic alterations, termed driver mutations, confer selective growth advantage and are implicated in cancer development, whereas the remainder are passengers. Here we have sequenced the genomes of a malignant melanoma and a lymphoblastoid cell line from the same person, providing the first comprehensive catalogue of somatic mutations from an individual cancer. The catalogue provides remarkable insights into the forces that have shaped this cancer genome. The dominant mutational signature reflects DNA damage due to ultraviolet light exposure, a known risk factor for malignant melanoma, whereas the uneven distribution of mutations across the genome, with a lower prevalence in gene footprints, indicates that DNA repair has been preferentially deployed towards transcribed regions. The results illustrate the power of a cancer genome sequence to reveal traces of the DNA damage, repair, mutation and selection processes that were operative years before the cancer became symptomatic.},
